--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
 idna==2.8
+Jinja2==2.10.3
 lxml==4.4.2
+MarkupSafe==1.1.1
 pycparser==2.19
 requests==2.22.0
 urllib3==1.25.7
